--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9",
     "rocksdb": "^5.2.1",
     "uuid": "^11.1.0"
   }
